--- a/contact.html
+++ b/contact.html
@@ -78,10 +78,10 @@
         <section>
             <h2>Contact Us</h2>
             <p>Have questions or want to start lessons? Send us a message!</p>
-            <form>
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" rows="5" required></textarea>
+            <form action="https://getform.io/f/arogpryb" method="POST">
+                <input type="text" placeholder="Your Name" name="name">
+                <input type="email" placeholder="Your Email" name="email">
+                <textarea placeholder="Your Message" rows="5" name="message"></textarea>
                 <button type="submit">Send Message</button>
             </form>
         </section>
