--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
         <section>
             <h2>Contact Us</h2>
             <p>Have questions or want to start lessons? Send us a message!</p>
-            <form action="https://getform.io/f/arogpryb" method="POST">
+            <form action="https://formspree.io/f/mpwjgbzp" method="POST">
                 <input type="text" placeholder="Your Name" name="name">
                 <input type="email" placeholder="Your Email" name="email">
                 <textarea placeholder="Your Message" rows="5" name="message"></textarea>
